--- a/package.json
+++ b/package.json
@@ -49,10 +49,16 @@
     "intl-locales-supported": "^1.0.0",
     "json-loader": "^0.5.1",
     "jsx-loader": "^0.12.2",
+    "karma": "^0.13.10",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-mocha": "^0.2.0",
+    "karma-mocha-reporter": "^1.1.1",
+    "karma-sourcemap-loader": "^0.3.5",
+    "karma-webpack": "^1.7.0",
     "live-server": "^0.7.1",
     "minimist": "^1.1.1",
     "mkdirp": "^0.5.0",
-    "mocha": "^2.2.1",
+    "mocha": "^2.3.3",
     "ncp": "^2.0.0",
     "npm-run-all": "^1.2.2",
     "proxyquire": "^1.4.0",
