Moving to another computer

--- a/package.json
+++ b/package.json
@@ -62,8 +62,10 @@
     "ncp": "^2.0.0",
     "npm-run-all": "^1.2.2",
     "proxyquire": "^1.4.0",
+    "react-tappable": "^0.6.0",
     "rimraf": "^2.3.2",
     "should": "^5.2.0",
+    "simulant": "^0.1.5",
     "tmp": "^0.0.25",
     "watch": "^0.14.0",
     "webpack": "^1.7.3",
